[package]
name = "rexif"
version = "0.7.5"
authors = ["Elvis Pfützenreuter <epxx@epxx.co>", "Kornel <kornel@geekhood.net>", "Gabriela Alexandra Moldovan <gabi@cloudflare.com>"]
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE"]
description = "RExif is a native Rust crate, written to extract EXIF data from JPEG and TIFF images."
license = "MIT"
categories = ["multimedia::images", "parser-implementations"]
documentation = "https://docs.rs/rexif"
homepage = "https://lib.rs/crates/rexif"
keywords = ["exif", "metadata", "ifd", "tag", "gps"]
readme = "README.md"
repository = "https://github.com/kornelski/rexif.git"
edition = "2021"
rust-version = "1.60"

[lib]
name = "rexif"
path = "src/lib.rs"

[dev-dependencies]
glob = "0.3.1"

[[bin]]
name = "rexiftool"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }
